--- a/API/src/main/resources/bootstrap.properties
+++ b/API/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.application.name=API
+spring.application.name=api
 spring.cloud.config.discovery.enabled=true
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
