--- a/Db_Service/src/main/resources/bootstrap.properties
+++ b/Db_Service/src/main/resources/bootstrap.properties
@@ -1,3 +1,3 @@
-spring.application.name=Db_Service
+spring.application.name=db-service
 spring.cloud.config.discovery.enabled=true
 eureka.client.service-url.defaultZone = http://localhost:8761/eureka
