--- a/API/pom.xml
+++ b/API/pom.xml
@@ -62,7 +62,14 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
+		<dependency>
+			<groupId>javax.inject</groupId>
+			<artifactId>javax.inject</artifactId>
+			<version>1</version>
+		</dependency>
 	</dependencies>
+
+
 
 	<dependencyManagement>
 		<dependencies>
@@ -83,6 +90,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>API</finalName>
 	</build>
 
 
