--- a/Db_Service/src/main/resources/bootstrap.properties
+++ b/Db_Service/src/main/resources/bootstrap.properties
@@ -1,3 +1,6 @@
-spring.application.name=Db_Service
+spring.application.name=db-service
 spring.cloud.config.discovery.enabled=true
-eureka.client.service-url.defaultZone = http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.preferIpAddress=true
+eureka.instance.metadataMap.instanceId=${vcap.application.instance_id:${spring.application.name}:${spring.application.instance_id:${random.value}}}
