Edited docker file to match working copy

--- a/DiscoveryService/Dockerfile
+++ b/DiscoveryService/Dockerfile
@@ -1,4 +1,11 @@
-FROM openjdk:8
-ADD target/discovery-server.jar discovery-server.jar
+FROM openjdk:8-jdk-alpine
+LABEL maintainer="aswin"
+
+RUN apk --update --no-cache add curl
+
+ADD ./target/discovery-server.jar /app/
+CMD ["java", "-Xmx200m", "-jar", "/app/discovery-server.jar"]
+
+HEALTHCHECK --interval=10s --timeout=30s --retries=10 CMD curl -f http://192.168.99.101:8761/actuator/health || exit 1
+
 EXPOSE 8761
-ENTRYPOINT ["java" , "-jar" , "discovery-server.jar"]
