Changes to load the homepage title directly from configmap

--- a/API/config/application.properties
+++ b/API/config/application.properties
@@ -5,3 +5,5 @@ spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.prefix=classpath:/templates/views/
 spring.thymeleaf.suffix=.html
+
+home.page.heading = library manager
